# rust-lang

./: .clippy.toml  .cursorignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .non_github_links_cache.json  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.json  .vimrc  100_PERCENT_COMPLETE_RUST_194_ALIGNMENT.md  100_PERCENT_COMPLETION_AUTHORITATIVE_2026_03_13.md  100_PERCENT_COMPLETION_CERTIFICATE.md  100_PERCENT_COMPLETION_DECLARATION.md  100_PERCENT_COMPLETION_FINAL_REPORT.md  100_PERCENT_COMPLETION_FINAL_REPORT_2026_02_28.md  100_PERCENT_COMPLETION_FINAL_REPORT_2026_03_08.md  100_PERCENT_COMPLETION_FINAL_REPORT_2026_03_13.md  100_PERCENT_COMPLETION_SUMMARY.md  19_parallel_distributed_pattern_spectrum_L459.long-type-1103679700355435901.txt  19_parallel_distributed_pattern_spectrum_L459.long-type-7816492478297275164.txt  19_parallel_distributed_pattern_spectrum_L477.long-type-5519012775831159653.txt  19_parallel_distributed_pattern_spectrum_L483.long-type-18114987172608781519.txt  ABSOLUTE_100_PERCENT_COMPLETION.md  ACHIEVEMENT_SUMMARY_2026_01_26.md  AGENTS.md  AI_ASSISTED_RUST_PROGRAMMING_GUIDE_2025.md  ALIGNMENT_VISUALIZATION_2025.md  ALL_TASKS_COMPLETION_FINAL_REPORT_2025_12_11.md  ARCHIVE_POLICY.md  ARCHIVE_SUMMARY.md  ARCHIVE_SUMMARY_2025_12_25.md  ARCHIVE_SUMMARY_2026_03_15.md  BEST_PRACTICES.md  BROKEN_LINKS_REPORT.md  C02_TIER3_VERIFICATION_REPORT_2025_12_11.md  C09-C13_文档梳理完成报告.md  C10_C11_COMPLETION_SUMMARY_2025_10_20.md  C11_RENAME_COMPLETION_REPORT_2025_10_21.md  (+560 more)
c06_async/: Cargo.toml
c06_async/examples/: exp01.rs  tokio_exp01.rs
c06_async/src/: lib.rs
c11_frameworks/: Cargo.toml
c11_frameworks/src/: lib.rs
c13_microservice/: Cargo.toml
c13_microservice/src/: lib.rs
crates/c01_ownership_borrow_scope/: .clippy.toml  C01_COMPREHENSIVE_ENHANCEMENT_REPORT_2025_10_20.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FINAL_ENHANCEMENT_REPORT.md  FINAL_RUST_190_ENHANCEMENT_REPORT.md  README.md  RUST_190_COMPREHENSIVE_PROGRESS_REPORT.md  RUST_190_LATEST_FEATURES_ENHANCEMENT_REPORT.md
crates/c02_type_system/: API_DOCUMENTATION.md  BEST_PRACTICES_GUIDE.md  CARGO_DOCUMENTATION_SYSTEM_REPORT.md  CARGO_PACKAGE_MANAGEMENT_GUIDE.md  CARGO_SUPPLEMENT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENT_COMPLETION_REPORT.md  EXAMPLES_AND_USE_CASES.md  FINAL_COMPLETION_REPORT.md  FINAL_DELIVERY_REPORT_2025_10_22.md  FINAL_RUST_190_COMPLETION_REPORT.md  MULTI_TASK_PROGRESSION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY_2025_10_22.md  PROJECT_STATUS_2025_10_22.md  README.md  README_RUST_189.md  README_RUST_190.md  RUST_190_FEATURES_ANALYSIS_REPORT.md  RUST_190_PROJECT_UPDATE_SUMMARY.md  RUST_190_feature_inventory_report.md  RUST_190_特性梳理完成报告.md  RUST_192_COMPLETION_REPORT.md  RUST_FEATURES_DOCUMENTATION_ORGANIZATION_REPORT.md  TUTORIAL_GUIDE.md  api_documentation.md  best_practices_guide.md  cargo_package_management_guide.md  dispatch_mechanisms_supplement_2025_10_19.md  examples_and_use_cases.md  final_delivery_report_2025_10_22.md  project_completion_summary_2025_10_22.md  project_status_2025_10_22.md  readme_rust_189.md  readme_rust_190.md  rust_190_feature_inventory_report.md  rust_192_completion_report.md  tutorial_guide.md  (+1 more)
crates/c03_control_fn/: BASIC_SYNTAX_ENHANCEMENT_SUMMARY.md  C03_COMPREHENSIVE_ENHANCEMENT_REPORT_2025_10_20.md  Cargo.toml  FINAL_PROJECT_COMPLETION_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  README.md  RUST_189_ENHANCEMENT_COMPLETION_REPORT.md  RUST_190_COMPLETE_FEATURES_REPORT.md  RUST_190_COMPREHENSIVE_ADVANCEMENT_REPORT.md  RUST_190_ENHANCEMENT_COMPLETION_REPORT.md  RUST_190_FINAL_PROJECT_COMPLETION_SUMMARY.md  RUST_192_COMPLETION_SUMMARY.md  rust_192_completion_summary.md
crates/c04_generic/: .clippy.toml  .gitignore  BADGES.md  C04_COMPREHENSIVE_ENHANCEMENT_REPORT_2025_10_20.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  FINAL_ENHANCEMENT_SUMMARY.md  FINAL_PROJECT_REPORT.md  KNOWLEDGE_SYSTEM_COMPLETION_REPORT_2025_10_19.md  PROJECT_ACHIEVEMENT_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  badges.md  build.bat  build.sh  config.md  demo_script.md  libadvanced_patterns.rlib  libbasic_syntax.rlib  rustfmt.toml
crates/c05_threads/: Cargo.toml  README.md  RUST_190_FEATURES_SUMMARY.md
crates/c06_async/: ASYNC_THEORY_COMPREHENSIVE_GUIDE.md  COMMUNITY_CONTRIBUTION_GUIDE.md  COMPLETION_SUMMARY_2025_10_04.md  COMPREHENSIVE_PROJECT_COMPLETION_REPORT.md  COMPREHENSIVE_PROJECT_SUMMARY.md  Cargo.toml  FINAL_COMPREHENSIVE_SUMMARY_2025_10_06.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PROJECT_ADVANCEMENT_SUMMARY_2025_09_28.md  FINAL_PROJECT_STATUS_2025.md  FINAL_SEMANTIC_ALIGNMENT_REPORT_2025.md  FIXES_SUMMARY_REPORT.md  GLOMMIO_INTEGRATION_2025_10_30.md  INDEX.md  KNOWLEDGE_SYSTEM_COMPLETION_REPORT_2025_10_19.md  MULTI_TASK_COMPLETION_SUMMARY_2025.md  PROJECT_ADVANCEMENT_SUMMARY_2025.md  PROJECT_COMPLETION_CERTIFICATE_2025.md  QUICK_START_GUIDE_2025.md  README.md  README_ASYNC_ECOSYSTEM.md  RUST_190_ASYNC_ECOSYSTEM_COMPREHENSIVE_ANALYSIS_2025.md  RUST_190_ASYNC_FEATURES_COMPREHENSIVE_REPORT_2025.md  RUST_190_ASYNC_FINAL_COMPREHENSIVE_REPORT_2025.md  RUST_190_COMPLETION_REPORT.md  RUST_190_REAL_FEATURES_FINAL_REPORT.md  RUST_190_ULTIMATE_ADVANCEMENT_REPORT.md  RUST_192_C06_UPDATE_SUMMARY.md  ULTIMATE_PROJECT_COMPLETION_REPORT.md  async_programming_comprehensive_review_readme_2025_10_06.md  async_theory_comprehensive_guide.md  build.rs  community_contribution_guide.md  completion.md  final_project_status_2025.md  glommio_integration_2025_10_30.md  knowledge_base_update_notes_2025_10_19.md  quick_start_guide_2025.md  readme_async_ecosystem.md  (+6 more)
crates/c12_wasm/: README.md  (+33 more)
exercises/: Cargo.toml  README.md  RUSTLINGS_MAPPING.md  rustlings_mapping.md
tools/: Cargo.toml  check_completion.py  ci_check.py  completion_analyzer.py  concept_lookup.sh  crossref_check.py  crossref_check_language.py  daily_review.sh  doc_checker.rs  generate_stats.sh  graph_generator.py  install_hooks.ps1  knowledge_search.sh  scan_refs.py  structure_checker.rs  terminology_fixer.rs
(+33483 files in other folders)
