[workspace]

resolver = "3"

members = [
    "crates/c01_ownership_borrow_scope",
    "crates/c02_type_system",
    "crates/c03_control_fn",
    "crates/c04_generic",
    "crates/c05_threads",
    "crates/c06_async",
    "crates/c07_process",
    "crates/c08_algorithms",
    "crates/c09_design_pattern",
    "crates/c10_networks",
    "crates/c11_macro_system",
    "crates/c12_wasm",
    "crates/c13_embedded",
    "crates/common",
    "exercises",
]

[workspace.package]
edition = "2024"
rust-version = "1.96.0"

[profile.release]

#opt-level = "s" 和 opt-level = "z" 专门针对减小二进制体积设计
#"s"：在保持较好性能的同时尽可能减小体积
#"z"：最大程度地优化体积，可能牺牲少量性能
opt-level = 3

#链接时优化（Link Time Optimization, LTO）允许编译器跨 crate 边界进行整体优化，消除冗余代码和数据。
#lto = "fat" 这种配置下，编译器会在链接阶段对所有代码进行全局优化，通常能减少 20-30% 的体积。
#对于对体积有极端要求的场景，可以使用 "thin" 替代 "fat"，在优化效果和编译时间之间取得平衡。
lto = "fat"

# codegen-units = 1 表示单个代码生成单元，即每个 crate 都独立编译。
# 这种配置下，每个 crate 的编译速度会更快，但可能会牺牲一些整体优化效果。
# 如果希望获得更好的优化效果，可以将 codegen-units 设置为更大的值（如 256）。
codegen-units = 1

#去除调试符号是减小二进制体积最有效的方法之一。
#strip = true
strip = "symbols"

# Rust 1.95+: 分割调试信息 (macOS 上特别有效，1.96+ 仍适用)
split-debuginfo = "packed"

# 默认情况下，Rust 在 panic 时会进行栈展开，提供详细的调用栈信息。
# 但在生产环境中，特别是对于命令行工具和小型服务，立即终止程序可能是更合适的选择：
# 这种配置不仅减小了二进制体积（因为它不需要包含栈展开的代码），还能略微提升性能。
panic = "abort"

# CPU指令集优化 - Rust 1.95+ 推荐设置 (1.96+ 仍适用)
# 启用所有可用的CPU指令集优化
# 注意: target-cpu 和 target-feature 需要在编译时通过环境变量或.cargo/config.toml设置

# LTO 通过全局代码分析消除了未被使用的函数和数据；
# 调整优化级别使编译器优先选择空间效率更高的指令序列；
# 去除调试符号直接移除了大量的辅助信息；
# 改变 panic 策略避免了栈展开代码的引入；
# Musl 工具链则提供了一个更精简的标准库实现。
# 从编译流程角度看，这些优化发生在不同的阶段：
#  LTO 在链接阶段工作，优化级别影响编译中期决策，而去除符号和 panic 策略则影响前期的代码生成策略。
#  这种多阶段的优化组合确保了最终生成的二进制文件既小巧又高效。

[profile.dev]
# ========== 开发环境编译速度优化 ==========
# 优化级别 0 = 最快编译速度 (推荐开发使用)
opt-level = 0
# 调试信息级别: 0=无, 1=仅行表, 2=完整
debug = 1
debug-assertions = true
overflow-checks = true
# 增量编译 - 开发环境必须启用
incremental = true
# 代码生成单元: 更多=并行度更高=编译更快
codegen-units = 256
# 使用 unwind panic 可以获得更好的调试信息
panic = "unwind"

# 开发环境构建优化 - 构建依赖使用轻量级优化
[profile.dev.build-override]
opt-level = 1
codegen-units = 16

[profile.test]
# ========== 测试环境编译速度优化 ==========
opt-level = 1
debug = 1
# 增量编译加速测试
codegen-units = 256
incremental = true

[profile.bench]
# ========== 基准测试优化 - 平衡编译和运行速度 ==========
opt-level = 3
debug = false
# 使用 thin LTO - 比 fat LTO 快很多，性能接近
lto = "thin"
# 更多代码生成单元 = 更快编译
codegen-units = 4
# 注意: bench profile 不支持 panic 设置

# 基准测试构建优化
[profile.bench.build-override]
opt-level = 2
codegen-units = 16

# ========== release 构建依赖优化 ==========
[profile.release.build-override]
opt-level = 2
codegen-units = 16

# ========== 新增: 快速发布 Profile ==========
# 使用: cargo build --profile release-fast
# 适用于: 需要快速编译但仍需要优化的场景
[profile.release-fast]
inherits = "release"
# 使用 thin LTO 替代 fat LTO，编译速度更快
lto = "thin"
# 增加 codegen-units 以提高并行度
codegen-units = 4
# 保持其他 release 优化
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.release-fast.build-override]
opt-level = 2
codegen-units = 16

# ========== 新增: 最小体积 Profile ==========
# 使用: cargo build --profile size
# 适用于: 对二进制体积有严格要求的场景
[profile.size]
inherits = "release"
# 优化级别 z = 最小体积
opt-level = "z"
# 使用 fat LTO 获得最佳体积优化
lto = "fat"
# 单一 codegen-unit 获得最佳优化
codegen-units = 1
# 完全剥离符号
strip = true
panic = "abort"
# 禁用增量编译以获得最佳优化
incremental = false

[profile.size.build-override]
opt-level = 3
codegen-units = 1

# ========== 新增: 超快速检查 Profile ==========
# 使用: cargo check --profile check-fast
# 适用于: 快速语法检查，不运行代码
[profile.check-fast]
inherits = "dev"
opt-level = 0
debug = 0
codegen-units = 1024
panic = "abort"

# 工作区级别的依赖版本统一
# 2026-04-24: Rust 1.96.0/1.97.0-nightly 同步更新
# rust-version: 1.96.0
# 注意: 优先选择稳定成熟的版本，避免使用 alpha/RC 版本导致的破坏性变更
[workspace.dependencies]
# 本地 crate
common = { path = "crates/common", default-features = false }

# 2025-12-11: 网络和 HTTP 相关最新稳定版本
# reqwest: 高级HTTP客户端库，支持异步请求和JSON序列化
# 注意: reqwest 0.12.x 使用 "rustls-tls" 特性，0.13.x 使用 "rustls" 特性
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
# hyper: 底层HTTP库，提供高性能的HTTP/1.1和HTTP/2支持
hyper = { version = "1.9.0", features = ["full"] }
# hyper-util: hyper的实用工具库，提供连接池和服务器功能
hyper-util = "0.1.20"
# hyper-rustls: hyper与rustls的集成，提供安全的TLS连接
hyper-rustls = "0.28.1"
# libp2p: P2P网络协议栈
# 2026-04-24: 保持 0.54.1，升级至 0.56+ 需要同步升级 hickory-resolver 到 0.26.0
# 注意: hickory-resolver 0.26.0 API 变更大（ResolverConfig 预设、Resolver::new 返回 Result 等）
#       c10_networks DNS 模块需适配后才能解锁升级
libp2p = { version = "0.54.1", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "kad", "identify"] }
# hyper-tls: hyper与native-tls的集成，提供TLS支持
hyper-tls = "0.6.0"
# hyper-timeout: hyper的超时支持
hyper-timeout = "0.6.1"
# h2: HTTP/2协议的Rust实现
h2 = "0.4.13"
# http: HTTP类型和特征的Rust实现
# 2025-12-11: 更新至 1.4.0 (重大版本更新)
http = "1.4.0"

# 2025-12-11: Web 框架最新稳定版本
# axum: 现代Web框架，专注于人体工程学和模块化设计
axum = { version = "0.8.9", features = ["macros", "multipart", "tracing"] }
# axum-core: axum的核心功能库 (与axum 0.8.x配套)
axum-core = "0.5.6"
# tower: 异步服务抽象层，提供中间件和超时支持
tower = "0.5.3"
# tower-http: tower的HTTP中间件集合
tower-http = { version = "0.6.8", features = [
    "cors",           # 跨域资源共享支持
    "trace",          # 请求追踪支持
    "timeout",        # 请求超时支持
    "compression-gzip", # Gzip压缩支持
] }
# actix-web: 高性能的Web框架，基于Actor模型
actix-web = "4.13.0"
# actix: Actor系统框架
actix = "0.13.5"
# actix-rt: actix的运行时支持
actix-rt = "2.11.0"

# 2025-09-27: 终端UI库最新稳定版本
# crossterm: 跨平台终端操作库，支持Windows、Linux和macOS
crossterm = "0.29.0"

# 2025-12-11: 前端框架 - 跨平台UI
# dioxus: 全栈Web框架，支持Web、桌面和移动应用开发
# 2026-04-24: 0.7.6 稳定版已发布，升级自 0.7.0-rc.0
dioxus = "0.7.6"
dioxus-web = "0.7.6"
# dioxus-desktop: 暂时禁用，存在GTK3安全漏洞
# leptos: 全栈同构Rust Web框架，利用细粒度响应性
leptos = "0.8.12"  # 更新至最新稳定版本
leptos_axum = "0.8.6"  # 更新至最新稳定版本

# 2025-12-11: 桌面应用框架 (Tauri 2.0已解决GTK3安全漏洞)
# tauri: 使用Web技术构建跨平台桌面应用的框架
tauri = "2.9.3"
# tauri-build: tauri的构建工具
tauri-build = "2.5.2"

# 2025-12-11: 其他异步生态常用依赖（统一版本）
# async-trait: 异步trait支持库
async-trait = "0.1.89"
# async-stream: 异步流处理库 (已移除，使用 tokio-stream 替代)
# async-stream = "0.3.6"  # 已移除，使用 tokio-stream 替代
# async-std 已移除，使用 tokio 替代
# tokio-console: tokio的控制台调试工具
tokio-console = "0.1.14"
# tokio-test: tokio的测试工具
tokio-test = "0.4.5"
# mio: 跨平台异步I/O库
mio = "1.2.0"
# tungstenite: WebSocket协议的Rust实现
# 2026-03-28: 0.28.0 -> 0.29.0 (cargo update)
tungstenite = "0.29.0"
# rcgen: X.509证书生成库
rcgen = "0.14.7"

# 2025-10-06: 基础依赖统一
# dotenvy: 环境变量管理库，dotenv的维护良好的分支
dotenvy = "0.15.7"
# tempfile: 临时文件和目录管理库
tempfile = "3.27.0"

# 2025-12-11: gRPC 相关最新稳定版本
# tonic: 高性能的gRPC over HTTP/2实现，专注于互操作性和灵活性
tonic = { version = "0.14.5", features = [
    "transport",        # 传输层支持
    "tls-ring",         # 使用ring的TLS支持
    "tls-webpki-roots", # WebPKI根证书支持
    "channel",          # 客户端通道支持
] }
# tonic-build: tonic的构建工具，用于生成gRPC代码
tonic-build = "0.14.5"
# tonic-prost: tonic与prost的集成
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
# prost: Protocol Buffers的Rust实现
prost = "0.14.3"
# prost-build: prost的构建工具
prost-build = "0.14.3"
# prost-derive: prost的派生宏
prost-derive = "0.14.3"
# prost-types: prost的类型定义
prost-types = "0.14.3"

# 安全更新 - 修复protobuf安全漏洞 (RUSTSEC-2024-0437)
# 通过工作区依赖强制使用安全版本
protobuf = "4.33.2-release" # 修复递归崩溃漏洞

# 2025-12-11: TLS 和加密最新稳定版本
# rustls: 现代TLS库，用Rust编写，提供高性能和安全性
# 2026-04-24: 0.23.38 -> 0.23.39 (cargo update，Rust 1.96.0 compatible)
rustls = { version = "0.23.39", features = ["ring"] }
# rustls-webpki: rustls的WebPKI支持
rustls-webpki = "0.103.13"
# rustls-pemfile: rustls的PEM文件解析支持
rustls-pemfile = "2.2.0"
# tokio-rustls: tokio与rustls的集成
tokio-rustls = "0.26.4"
# ring: 加密原语库，提供高性能的加密算法实现
ring = "0.17.14"
# webpki-roots: WebPKI根证书集合
webpki-roots = "1.0.6"

# 2025-12-11: 错误处理最新稳定版本
# thiserror: 错误类型派生宏库，简化错误处理
thiserror = "2.0.18"
# anyhow: 灵活的错误处理库，基于std::error::Error构建
anyhow = "1.0.102"

# 2025-12-11: 序列化最新稳定版本
# serde: 通用序列化/反序列化框架，支持多种数据格式
serde = { version = "1.0.228", features = ["derive"] }
# serde_json: JSON序列化/反序列化支持
serde_json = "1.0.149"
# serde_yaml: YAML序列化/反序列化支持
serde_yaml = "0.9.34"
# bincode: 二进制序列化格式，高效且紧凑
# 2026-03-28: 保持 2.0.1，等待 3.0 正式版发布
# 注意: 不要升级，3.0.0 占位符版本有编译错误
bincode = { version = "=2.0.1", features = ["serde"] }

# 2025-12-11: 异步运行时最新稳定版本
# tokio: 事件驱动的非阻塞I/O平台，用于编写异步I/O应用程序
tokio = { version = "1.52.1", features = ["full"] }
# tokio-util: tokio的实用工具库
tokio-util = "0.7.18"
# tokio-stream: tokio的流处理支持
tokio-stream = "0.1.18"
# tokio-tungstenite: tokio与tungstenite的集成，提供WebSocket支持
# 2026-03-28: 0.28.0 -> 0.29.0 (cargo update)
tokio-tungstenite = "0.29.0"
# futures: 异步编程的基础库
futures = "0.3.32"
# futures-util: futures的实用工具库
futures-util = "0.3.32"

# 2025-12-11: 日志和追踪最新稳定版本
# tracing: 应用程序级别的追踪库，用于结构化日志记录
tracing = "0.1.44"
# tracing-subscriber: tracing的订阅者实现，支持多种输出格式
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
# log: 标准日志库，提供简单的日志记录接口
log = "0.4.29"
# prometheus: Prometheus指标收集库
prometheus = "0.14.0"
# tracing-opentelemetry: tracing与OpenTelemetry的集成 - 2025年10月最新版本
tracing-opentelemetry = "0.32.0"
# opentelemetry: OpenTelemetry的Rust实现 - 2025年10月最新稳定版本
opentelemetry = "0.31.0"
# opentelemetry_sdk: OpenTelemetry SDK - 2025年10月最新稳定版本
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
# opentelemetry-otlp: OpenTelemetry OTLP导出器 - 2025年10月最新稳定版本
opentelemetry-otlp = { version = "0.31.0", features = ["http-json"] }
# opentelemetry-stdout: OpenTelemetry标准输出导出器 - 2025年10月最新稳定版本
opentelemetry-stdout = "0.31.0"
# opentelemetry-proto: OpenTelemetry协议缓冲区定义 - 2025年10月最新稳定版本
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic"] }

# 2025-09-27: 指标最新稳定版本
# metrics: 指标收集库，提供高性能的指标记录
metrics = "0.24.2"
# metrics-exporter-prometheus: metrics的Prometheus导出器
metrics-exporter-prometheus = "0.18.1"

# 2025-12-25: 时间处理最新稳定版本
# chrono: 日期和时间处理库，支持多种日期格式和时区
chrono = { version = "0.4.44", features = ["serde"] }
# time: 现代时间处理库，提供高性能的时间操作
time = { version = "0.3.47", features = ["serde", "macros"] }

# 2025-12-11: 其他常用库最新稳定版本
# uuid: UUID生成和解析库，支持多种UUID版本
uuid = { version = "1.23.1", features = ["v4", "serde"] }
# url: URL解析和操作库
url = "2.5.8"
# bytes: 字节缓冲区处理库，提供高效的字节操作
bytes = "1.11.1"
# indexmap: 保持插入顺序的HashMap实现
indexmap = "2.14.0"
# once_cell: 单次初始化单元格，用于全局变量初始化
once_cell = "1.21.4"
# num_cpus: CPU核心数检测库
num_cpus = "1.17.0"
# libc: 系统调用接口库，提供与C库的绑定
# 2026-04-24: 0.2.186 (Rust 1.96.0 compatible)
libc = "0.2.186"
# rand: 随机数生成库，提供高质量的随机数生成
# 2026-03-28: 升级到 0.10.x (重大版本更新)
rand = "0.10.1"
# rand_chacha: ChaCha20随机数生成器
rand_chacha = "0.9.0"
# rand_core: 随机数核心库
rand_core = "0.9.5"
# sha2: SHA-2哈希算法实现
# 2026-03-28: 升级到 0.11.0 (重大版本更新)
sha2 = "0.11.0"
# hex: 十六进制编码/解码库
hex = "0.4.3"
# twox-hash: 高性能哈希算法
twox-hash = "2.1.2"
# memoffset: 内存偏移计算库
memoffset = "0.9.1"

# 2025-12-11: 数据库和存储最新稳定版本
# sea-orm: 异步动态ORM，支持多种数据库后端
# 2026-04-24: 2.0.0 仍未发布稳定版，最新 rc.38
sea-orm = { version = "2.0.0-rc.18", features = [
    "sqlx-postgres",      # PostgreSQL支持
    "runtime-tokio-rustls", # tokio运行时和rustls支持
], default-features = false }
# sqlx: 异步纯Rust SQL工具包，支持编译时检查的查询
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls", # tokio运行时和rustls支持
    "postgres",            # PostgreSQL支持
    "mysql",               # MySQL支持
    "sqlite",              # SQLite支持
    "chrono",              # 时间类型支持
    "uuid",                # UUID类型支持
], default-features = false }
# redis: Redis客户端库，支持异步操作
redis = "1.2.0"
# rusqlite: SQLite的Rust绑定，提供类型安全的SQLite接口
rusqlite = { version = "0.38.0", default-features = false }
# mysql_async: MySQL异步客户端
mysql_async = "0.36.1"
# mysql_common: MySQL通用类型
mysql_common = "0.35.5"
# mysql-common-derive: MySQL通用类型派生宏
mysql-common-derive = "0.32.1"

# 2025-12-11: 性能测试和基准测试最新稳定版本
# criterion: 统计驱动的微基准测试库，提供详细的性能分析
criterion = "0.8.2"

# 2026-03-18: 配置管理最新稳定版本
# config: 分层配置系统，支持多种配置格式
config = "0.15.22"
# toml: TOML格式的编码器和解码器
toml = "1.1.2+spec-1.1.0"

# 2025-12-11: 并发和同步最新稳定版本
# crossbeam: 并发编程工具库，提供无锁数据结构和同步原语
crossbeam = "0.8.4"
# crossbeam-channel: 多生产者多消费者通道
crossbeam-channel = "0.5.15"
# crossbeam-queue: 无锁队列
crossbeam-queue = "0.3.12"
# crossbeam-utils: 并发工具
crossbeam-utils = "0.8.21"
# crossbeam-epoch: 基于epoch的内存回收
crossbeam-epoch = "0.9.18"
# crossbeam-deque: 工作窃取双端队列
crossbeam-deque = "0.8.6"
# rayon: 简单的工作窃取并行库，提供数据并行处理
rayon = "1.12.0"
# dashmap: 高性能并发HashMap，支持多线程安全访问
dashmap = "6.1.0"
# parking_lot: 更紧凑高效的同步原语实现 - 版本 0.12+ (字母索引)
parking_lot = "0.12.5"
# syn: 语法解析库
syn = "2.0.117"

# 2026-03-26: 测试相关最新稳定版本
# mockall: 强大的模拟对象库，用于单元测试
mockall = "0.14.0"
# proptest: 基于属性的测试库，类似Hypothesis - 版本 1.5+ (字母索引)
proptest = "1.11.0"
# rstest: 基于fixture的测试框架，支持参数化测试
rstest = "0.26.1"  # 更新至最新稳定版本
# cargo-tarpaulin: 代码覆盖率测试工具
cargo-tarpaulin = "0.35.0"
# cargo-audit: 安全漏洞审计工具
cargo-audit = "0.22.0"

# 2025-10-11: AI 和机器学习最新稳定版本
# candle-core: 极简主义ML框架的核心库
candle-core = "0.9.1"
# candle-nn: candle的神经网络支持
candle-nn = "0.9.1"
# candle-transformers: candle的Transformer模型支持
candle-transformers = "0.9.1"
# tch: PyTorch的Rust绑定，提供深度学习支持
tch = "0.22.0"
# petgraph: 图数据结构和算法库
petgraph = "0.8.3"
# image: 图像处理库
image = "0.25.8"
# imageproc: 图像处理算法库
imageproc = "0.26.0"
# nalgebra: 线性代数库
nalgebra = "0.34.1"
# nalgebra-macros: nalgebra的宏支持
nalgebra-macros = "0.3.0"
# ndarray: N维数组库 - 版本 0.15+ (字母索引)
ndarray = "0.17.1"
# ndarray-stats: ndarray的统计功能
ndarray-stats = "0.7.0"
# png: PNG图像格式支持
png = "0.18.0"
# tiff: TIFF图像格式支持
tiff = "0.11.0"
# bitflags: 位标志宏 - 2026-02-13: 2.10.0 -> 2.11.0 (cargo update)
bitflags = "2.11.1"  # 2026-04-23: 同步至实际解析版本
# hashbrown: 高性能HashMap实现
hashbrown = "0.17.0"
# itertools: 迭代器工具库
itertools = "0.14.0"
# lru: LRU缓存实现 - 2026-04-18: 升级至 0.17.0
lru = "0.17.0"

# Web 和 GUI 框架 - 2025年12月11日最新稳定版本
# tauri 已移除，使用 egui/iced 替代 (解决 GTK3 安全漏洞)
# egui: 易于使用的即时模式GUI，支持Web和原生平台 - 版本 0.28+ (字母索引)
egui = "0.33.2"
# iced: 受Elm启发的跨平台GUI库
iced = "0.14.0"

# 2025年最新深度学习框架
# burn = "0.10.0"  # 暂时禁用，存在版本兼容性问题
# burn-ndarray = "0.10.0"  # 暂时禁用，存在版本兼容性问题
# burn-tch 暂时禁用，与现有tch版本冲突

# 2025-10-20: 高性能异步运行时最新稳定版本
# glommio: 线程每核心异步运行时，支持高并行异步应用程序
glommio = "0.9.0"

# bindgen: C/C++ 绑定自动生成工具
# 2026-04-27: 升级至 0.72.1，统一由工作区管理
bindgen = "0.72.1"

# 2025-09-27: 安全漏洞修复
# 替换未维护和有安全漏洞的依赖
# ahash: 高性能哈希算法实现，替代fxhash (未维护)
ahash = "0.8.12"
# quote: 代码生成宏库，替代paste (未维护)
# 2026-01-26: 1.0.43 -> 1.0.44 (cargo update)
quote = "1.0.45"  # 2026-04-23: 同步至实际解析版本
# proc-macro2: 过程宏底层词法分析库
proc-macro2 = "1.0.106"
# proc-macro-error2: 过程宏错误处理库，替代proc-macro-error (未维护)
proc-macro-error2 = "2.0.1"
# is-terminal: 终端检测库，替代atty (有安全漏洞)
is-terminal = "0.4.17"
# wasm-bindgen: WebAssembly绑定生成器，支持WebAssembly 2.0 - 版本 0.2+ (字母索引)
# 2026-04-24: Rust 1.96.0 同步更新
wasm-bindgen = "0.2.118"
# js-sys: WebAssembly 与 JavaScript 的绑定
js-sys = "0.3.94"
# wasm-bindgen-futures: WebAssembly 异步 Future 支持
wasm-bindgen-futures = "0.4.67"
# wasm-bindgen-test: WebAssembly 测试框架
wasm-bindgen-test = "0.3.67"
# nix: 系统调用安全封装库
nix = "0.31.2"
# pingora 已移除，存在安全漏洞 (RUSTSEC-2025-0037, RUSTSEC-2025-0070)

# 2025-09-27: 安全更新 - 修复已知安全漏洞
# instant 已移除，使用 std::time::Instant 替代
# paste 已移除，使用 quote 宏替代
# proc-macro-error 已移除，使用 proc-macro-error2 替代

# 版本冲突修复 - 通过工作区依赖统一版本
# 注意: 使用 [patch.crates-io] 可能导致编译错误

# 传递依赖显式声明 - 用于版本控制和统一管理

# clap 系列 - 命令行参数解析
# 2026-04-27: clap 4.6.x 可用，但 tokio-console 0.1.14 (最新版) 和 criterion 0.8.2 (最新版)
#       传递依赖锁定在 4.5.x，无法升级
clap = { version = "4.5.61", default-features = false }
clap_builder = { version = "4.5.61", default-features = false }
clap_complete = "4.5.67"
clap_derive = "4.5.61"

# DNS 解析库 - 锁定 0.25.x 以兼容 libp2p 0.54.1
# 2026-04-24: hickory-resolver 0.26.0 已发布稳定版，但 API 变更大
# 注意: ResolverConfig 预设移除、Resolver::new 返回 Result、tokio-runtime feature 重命名为 tokio 等
#       c10_networks DNS 模块需适配后才能升级
# 预计解锁时间: 待 c10_networks DNS 模块适配 hickory-resolver 0.26 API 后
hickory-proto = "0.25.2"
hickory-resolver = { version = "0.25.2", features = ["tokio", "system-config"] }

# WebSocket 底层库
# 2026-03-28: 更新至 0.29.0
# tungstenite 已在上文声明

# 加密相关传递依赖
# 注意: crypto-mac 0.10.1 需要 subtle =2.4，与 rustls 需要的 subtle ^2.5.0 冲突
# 2026-04-08: 保持 0.10.0 以避免 subtle 版本冲突
crypto-mac = "=0.10.0"
# 注意: 存在 universal-hash 0.4.0 和 0.5.1 多个版本
# 2026-04-08: 保持 0.4.0 以维持兼容性
universal-hash = "=0.4.0"
# 2026-04-27: 0.14.9 可用，但 crypto-common 0.1.7 (digest/aead 等传递依赖)
#       精确锁定 generic-array = "=0.14.7"，无法升级。需等 crypto-common 新版解锁
# 注: 此为传递依赖，无子 crate 直接引用，workspace 版本仅作记录
generic-array = "0.14.9"

# 解析器组合子库
# 2026-04-18: 升级至 8.0.0
nom = "8.0.0"

# 其他传递依赖
# 2026-04-27: matchit 0.8.6 可用，但 axum 0.8.9 精确锁定 =0.8.4，无法升级
matchit = "0.8.4"
# 2026-04-27: unicode-width 0.2.2 可用，但 ratatui 0.29.0 (tokio-console 传递依赖) 锁定在 0.2.0
unicode-width = "0.2.0"

# 依赖版本约束 - 在工作区依赖中统一版本 end

# Bare-metal 嵌入式相关依赖 - 2026年4月24日添加
# cortex-m: ARM Cortex-M 处理器核心外设访问库
# cortex-m-rt: Cortex-M 运行时（启动代码、向量表）
# panic-halt: 最简单的 panic handler（进入无限循环）
# 2026-04-27: 升级至 1.0.0 (stable)
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "1.0.0"
volatile-register = "0.2.2"

# 工作区特性标志配置 - 优化编译时间和依赖管理
# 注意: 工作区依赖不能设为可选，特性标志在各crate中配置

# 安全补丁 - 强制使用安全版本的依赖
# 注意：通过工作区依赖统一管理版本，避免使用patch

# ========== 待评估升级项 ==========
# 2026-04-24: 以下依赖暂时锁定，需在条件成熟时评估升级
# - libp2p 0.54.1 -> 0.56+: 需同步升级 hickory-resolver 0.25 -> 0.26，c10_networks DNS 模块需适配
# - sea-orm 2.0.0-rc.18 -> 2.0.0 stable: 等待 SeaORM 2.0 正式版发布
# - bincode =2.0.1: 保持锁定，3.0.0 已发布但 API 不兼容，需代码适配后升级
# - burn / burn-ndarray: 保持禁用，等待版本兼容问题解决
# - dashmap: c06_async 已统一使用 workspace 版本 6.1.0
# - yamux 0.12.1 (libp2p 0.54.1 传递依赖) -> 0.13.10: 随 libp2p 升级解锁
# - rand 0.8.6 (libp2p 0.54.1 传递依赖) -> 0.9.4: 随 libp2p 升级解锁
# - getrandom 0.2.17 (libp2p 传递依赖) -> 0.3.4: 随 libp2p 升级解锁
# - backoff 0.4.0 (c06_async): 已标记为 unmaintained (RUSTSEC-2025-0012)，建议替换为 backon 或 tokio-retry
# - rustls feature "ring": 0.23.39 中 ring 特性已废弃，未来版本将移除，需迁移到 aws-lc-rs 或默认后端

[workspace.lints.rust]
unsafe_code = "forbid"
double_negations = "warn"
irrefutable_let_patterns = "allow"
# Rust 1.95+ 新增lints (1.96+ 仍适用)
unused_crate_dependencies = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
# 额外有用的lints
match_wildcard_for_single_variants = "warn"
redundant_closure_for_method_calls = "warn"
# Rust 1.95+ 推荐lints (1.96+ 仍适用)
ignored_unit_patterns = "warn"
manual_c_str_literals = "warn"
unnecessary_map_on_constructor = "warn"
map_with_unused_argument_over_ranges = "warn"
unnecessary_semicolon = "warn"
unused_result_ok = "warn"
zero_repeat_side_effects = "warn"
manual_is_power_of_two = "warn"
unnecessary_min_or_max = "warn"
single_match_else = "allow"
needless_lifetimes = "warn"
type_complexity = "allow"
too_many_arguments = "allow"
# 异步相关
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
# 性能相关
unnecessary_box_returns = "warn"
# 代码质量
module_name_repetitions = "allow"
struct_field_names = "allow"
similar_names = "allow"

# 注: core2 补丁已移除
# multihash 0.19.4+ / libp2p-core 已迁移到 no_std_io2，不再需要 core2 补丁
